syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Alieksieiev0/auth-service/api/proto";

service AuthService {
    rpc Register(User) returns (google.protobuf.Empty);
    rpc Login(User) returns (Token);
    rpc ReadClaims(Token) returns (UserClaims);
}

message Token {
    string value = 1;
}

message User {
    string username = 1;
    string password = 2;
    string email = 3;
}

message UserClaims {
    string username = 1;
    string email = 2;
    string algorithm = 3;
    string issuer = 4;
    string subject = 5;
    repeated string audience = 6;
    google.protobuf.Timestamp expires_at = 7;
    google.protobuf.Timestamp not_before = 8;
    google.protobuf.Timestamp issued_at = 9;
    string id = 10;
}
